--- a/Parfum/lab-art.html
+++ b/Parfum/lab-art.html
@@ -2,47 +2,62 @@
     <head>
         <link rel="stylesheet" href="lab-art.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- login -->
-        <div class="container">
-            <div class="login-flex">
-                <div class="login-menu-left">
-                    <div class="logo">
-                        <img src="img/image 1.png" alt="">
+        <div class="halaman1">
+            <div class="container">
+                <div class="login-flex">
+                    <div class="login-menu-left">
+                        <div class="logo">
+                            <img src="img/image 1.png" alt="">
+                        </div>
+                        <div class="brand">
+                            Lab Art Aromatique
+                        </div>
+                        <div class="login-input">
+                            <label for="number">Employee Identification Number</label>
+                            <br>
+                            <input type="text" class="number">
+                            <br>
+                            <label for="password">Pasword</label>
+                            <br>
+                            <input type="password" class="password">
+                            <br>
+                            <button class="tombol">LOGIN</button>
+                        </div>
                     </div>
-                    <div class="brand">
-                        Lab Art Aromatique
-                    </div>
-                    <div class="login-input">
-                        <label for="number">Employee Identification Number</label>
-                        <br>
-                        <input type="text" class="number">
-                        <br>
-                        <label for="password">Pasword</label>
-                        <br>
-                        <input type="password" class="password">
-                        <br>
-                        <button class="tombol">LOGIN</button>
-                    </div>
-                </div>
-                <div class="login-menu-right">
-                    <div class="content">
-                        <img src="img/Rectangle 2.png" width="100%" height="768px">
-                        <div class="deskripsi">
-                            <div class="profil">
-                                <div class="parfume">Perfume</div>
-                                <div class="designer">Charise Clarke</div>
-                            </div>
-                            <div class="arrow">
-                                <img src="img/akar-icons_chevron-left.png" alt="">
-                            </div>
-                            <div class="isi">
-                                Limbs littered the earth, her negligee no longer lay in his soldier’s
-                                world; he would do anything to smell her perfume
-                                once more. What day was it? Ahhh…Monday,
+                    <div class="login-menu-right">
+                        <div class="content">
+                            <img src="img/Rectangle 2.png" width="100%" height="">
+                            <div class="deskripsi">
+                                <div class="profil">
+                                    <div class="parfume">Perfume</div>
+                                    <div class="designer">Charise Clarke</div>
+                                    <div class="arrow">
+                                        <div class="arrow-right">
+                                            <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M4.99998 1.33333L2.33331 3.99999L4.99998 6.66666" stroke="white" stroke-opacity="0.59" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                                </svg>                                        
+                                        </div>
+                                        <div class="spasi"></div>
+                                        <div class="arrow-left">
+                                            <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M3.00002 1.33333L5.66669 3.99999L3.00002 6.66666" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                                </svg>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="isi">
+                                    Limbs littered the earth, her negligee no longer lay in his soldier’s
+                                    world; he would do anything to smell her perfume
+                                    once more. What day was it? Ahhh…Monday,
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -50,5 +65,6 @@
             </div>
         </div>
         <!-- login -->
+
     </body>
 </html> 
