--- a/Parfum/lab-art2.html
+++ b/Parfum/lab-art2.html
@@ -14,9 +14,13 @@
             <div class="container">
                 <div class="top-nav">
                     <div class="heading">
-                    <div class="logo-mark">
-                        <img src="img/image 1.png" width="39px" height="39px">
-                    </div>
+                        <div class="nav-kiri">
+                            <div class="logo-mark">
+                                <img src="img/image 1.png" width="39px" height="39px">
+                            </div>
+                        </div>
+                        <div class="nav-kanan">
+                        </div>
                     </div>
                 </div>
                 <div class="mid">
@@ -38,7 +42,7 @@
                                 <li><b>1827191028119</b></li>
                             </ul>
                         </div>
-                        <div class="time">
+                        <div class="black-box">
                             <div class="mark">
                                 <b>MARK MY ATTENDANCE</b>
                             </div>
