--- a/Parfum/lab-art3.html
+++ b/Parfum/lab-art3.html
@@ -9,11 +9,71 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="fragrance1">
-            <div class="container">\
-                <div class="top-nav">
-                    
+        <div class="container">
+            <div class="top-nav">
+                    <div class="heading">
+                        <div class="nav-kiri">
+                            <div class="logo-mark">
+                                <img src="img/image 1.png" width="39px" height="39px">
+                            </div>
+                        </div>
+                        <div class="nav-kanan">
+                            <div class="nav-bar">
+                                <div class="feature">
+                                    Featured Product
+                                </div>
+                                <div class="catalog">
+                                    Catalog
+                                </div>
+                                <div class="craft">
+                                    Craft Your Fragrance
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            <div class="mid">
+                <div class="greetings">
+                    <div class="judul">
+                        <img src="img/logo-parfume.png" alt="">
+                        <div>Craft  Your Fragrance</div>
+                    </div>
+                    <div class="slide">
+                        <ul class="slide-content">
+                            <li>Pyramide Parfume</li>
+                            <li>Daily Activity</li>
+                            <li>Get Your Fragrance</li>
+                        </ul>
+                    </div>
+                    <div class="pyramid">
+                        <div class="pyramid1">
+                            <div class="text">TOP NOTES</div>
+                            <img src="img/set.png" alt="">
+                        </div>
+                        <div class="pyramid2">
+                            <div class="text">MIDDLE NOTES</div>
+                            <img src="img/set.png" alt="">
+                        </div>
+                        <div class="pyramid3">
+                            <div class="text">
+                                <div>Based Notes</div>
+                                <div>VANILLA</div>
+                            </div>
+                            <img src="img/set.png" alt="">
+                        </div>
+                    </div>
+                    <div class="black-box">
+                        <div class="next">
+                            NEXT STEP
+                        </div>
+                        <div class="select">
+                            <div class="white-box">
+                                <div><span>1</span> OF 3 SELECTED</div>
+                            </div>
+                        </div>                                                 
+                    </div>
                 </div>
+                </div>    
             </div>
         </div>
     </body>
