--- a/Parfum/lab-art4.html
+++ b/Parfum/lab-art4.html
@@ -44,25 +44,26 @@
                     <div class="slide">
                         <ul class="slide-content">
                             <li>Pyramide Parfume</li>
-                            <li>Daily Activity</li>
+                            <li class="black-slide">Daily Activity</li>
                             <li>Get Your Fragrance</li>
                         </ul>
                     </div>
-                    <div class="pyramid">
-                        <div class="pyramid1">
-                            <div class="text">TOP NOTES</div>
-                            <img src="img/set.png" alt="">
+                    <div class="white-box-large">
+                        SELECT YOUR ACTIVITIES
+                        <img src="img/Vector.png" alt="" width="12px" height="24px">
+                    </div>
+                    <div class="option">
+                        <div class="running">
+                            Running
                         </div>
-                        <div class="pyramid2">
-                            <div class="text">MIDDLE NOTES</div>
-                            <img src="img/set.png" alt="">
+                        <div class="meeting">
+                            Meeting Outside
                         </div>
-                        <div class="pyramid3">
-                            <div class="text">
-                                <div>Based Notes</div>
-                                <div>VANILLA</div>
-                            </div>
-                            <img src="img/set.png" alt="">
+                        <div class="sales">
+                            I'm Salesman
+                        </div>
+                        <div class="visit">
+                            Visit on site project
                         </div>
                     </div>
                     <div class="black-box">
@@ -71,7 +72,7 @@
                         </div>
                         <div class="select">
                             <div class="white-box">
-                                <div><span>1</span> OF 3 SELECTED</div>
+                                <div>3 SELECTED</div>
                             </div>
                         </div>                                                 
                     </div>
