--- a/website/website-riwayat-cuti.html
+++ b/website/website-riwayat-cuti.html
@@ -51,9 +51,9 @@
                                 </div>
                             </div>
                             <div class="mid-progres">
-                                <div class="progres-bar form-cuti">Form Cuti</div>
-                                <div class="progres-bar">Riwayat</div>
-                                <div class="progres-bar">Aturan</div>
+                                <div class="progres-bar pb-form-cuti-mati">Form Cuti</div>
+                                <div class="progres-bar pb-riwayat">Riwayat</div>
+                                <div class="progres-bar pb-aturan">Aturan</div>
                             </div>
                             <div class="mini-location">
                                 <a href="#" class="mini-home">Home <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -78,17 +78,45 @@
                                 <div class="jenis-cuti-button">Bulanan</div>
                                 <div class="jenis-cuti-button">Tahunan</div>
                             </div>
-                            <div class="content-mid">
+                            <div class="riwayat-cuti-container">
                                 <div class="riwayat-cuti">
                                     <div class="riwayat-cuti-left">
-                                        <b class="jenis Cuti">Cuti Tahunan</b>
-                                        <p class="nama-karyawan-cuti">Luqmanul Hakim</p>
-                                        <p class="tgl-cuti">Dari: 14 - 16 Okt 2023</p>
+                                        <div class="rcc jenis-Cuti"><b>Cuti Tahunan</b></div>
+                                        <div class="rcc nama-karyawan-cuti">Luqmanul Hakim</div>
+                                        <div class="rcc tgl-cuti">Dari: 14 - 16 Okt 2023</div>
                                     </div>
                                     <div class="riwayat-cuti-right">
-                                        <div class="riwayat-tgl-cuti">2 Dec 2023</div>
-                                        <div class="status-cuti">Menunggu</div>
-                                        <div class="detail-cuti">Detail</div>
+                                        <div class="rcc riwayat-tgl-cuti">2 Dec 2023</div>
+                                        <button class="rcc status-cuti pending">Menunggu</button>
+                                        <div class="rcc detail-cuti">Detail</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="riwayat-cuti-container">
+                                <div class="riwayat-cuti">
+                                    <div class="riwayat-cuti-left">
+                                        <div class="rcc jenis-Cuti"><b>Cuti Tahunan</b></div>
+                                        <div class="rcc nama-karyawan-cuti">Luqmanul Hakim</div>
+                                        <div class="rcc tgl-cuti">Dari: 14 - 16 Okt 2023</div>
+                                    </div>
+                                    <div class="riwayat-cuti-right">
+                                        <div class="rcc riwayat-tgl-cuti">2 Dec 2023</div>
+                                        <button class="rcc status-cuti accept">Diterima</button>
+                                        <div class="rcc detail-cuti">Detail</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="riwayat-cuti-container">
+                                <div class="riwayat-cuti">
+                                    <div class="riwayat-cuti-left">
+                                        <div class="rcc jenis-Cuti"><b>Cuti Tahunan</b></div>
+                                        <div class="rcc nama-karyawan-cuti">Luqmanul Hakim</div>
+                                        <div class="rcc tgl-cuti">Dari: 14 - 16 Okt 2023</div>
+                                    </div>
+                                    <div class="riwayat-cuti-right">
+                                        <div class="rcc riwayat-tgl-cuti">2 Dec 2023</div>
+                                        <button class="rcc status-cuti reject">Ditolak</button>
+                                        <div class="rcc detail-cuti">Detail</div>
                                     </div>
                                 </div>
                             </div>
