responsive iphone 14 promax

--- a/website/website-home.html
+++ b/website/website-home.html
@@ -4,6 +4,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="website-responsive.css">
+        <meta name="viewport" content="width=device-width">
     </head>
     <body>
         <div class="home-page">
@@ -40,6 +42,26 @@
                     </div>
                     <div class="flex-home">
                         <div class="bg-merah"></div>
+
+                        <div class="responsive">
+
+                            <div class="box-responsive">
+                                <div class="box-putih-responsive">
+                                    <div class="jam-responsive">
+                                        <h4>08:45 <img src="img/Frame 594.png" alt=""></h4>
+                                        <button>HADIR</button>
+                                        <div class="lokasi"> <img src="img/bi_bar-chart-fill.png" alt="">Kantor Jogja</div>
+                                    </div>
+                                    <div class="garis-tengah-responsive"></div>
+                                    <div class="pulang-responsive">
+                                        <h4>-- : --</h4>
+                                        <button>PULANG</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
                         <div class="absen-tanggal">
                             <p>Kamis, 14 December 2023</p>
                             <p class="lokasi"> <img src="img/bi_bar-chart-fill.png" alt="">Kantor Jogja</p>
