--- a/website/website-login.html
+++ b/website/website-login.html
@@ -4,7 +4,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+        <link rel="stylesheet" href="website-responsive.css">
+        <meta name="viewport" content="width=device-width">
     </head>
     <body>
         <div class="login-page">
@@ -14,9 +16,9 @@
                         <h4>Login</h4>
                         <p>Wellcome to Employees Management System</p>
                         <label for="email">Email</label>
-                        <input type="email" class="email">
+                        <input type="email" class="email" placeholder="Email">
                         <label for="password"> Password</label>
-                        <input type="password">
+                        <input type="password" placeholder="Password">
                         <button type="submit">Login</button>
                         <a href="#">Lupa Password ?</a>
                     </div>
